Version 0.7109:
- Add missing URI::Escape dependency

Version 0.7108:
- Add standard tests
- Fix compatibility issue with newer versions of perl, which remove "." from
  @INC. https://rt.cpan.org/Ticket/Display.html?id=121015
- Fix no_index declaration for delta.pl.
  https://rt.cpan.org/Ticket/Display.html?id=112477

Version 0.7107: Sat May 2 2015
- Prevent CPAN from indexing private-lib

Version 0.7106: Mon Apr 20 2015
- Clarify licensing terms
- Move verbose testing to a private module, and implement it in a way that
  doesn't require editing the Makefile after it is generated.

Version 0.7105: Sun Apr 12 2015
- Make basic.t 'Nonzero single result' test reliable
  http://www.cpantesters.org/cpan/report/abcfc65a-de71-11e4-a1d1-8536eb4f9f07
- Enable verbose testing for CPAN-testers
- Consolidate issue tracking at rt.cpan.org

Version 0.7104: Sat Apr 4 2015
- Bundle Module::AutoInstall to prevent breaks when people don't have it
  installed already. Thanks to Andreas Koenig <andk@cpan.org> for the report,
  and Paul Howarth <paul@city-fan.org> for giving me a kick in the pants to
  fix it. https://rt.cpan.org/Ticket/Display.html?id=65673

Version 0.7103: Sun Mar 22 2015
- Moved code to github
- Added POD test

Version 0.7102: Sun Aug 9 2009
- Updated to the latest version of Module::Install

Version 0.7101: Mon Jul 14 2008
- Updated to the latest version of Module::Install
- Removed auto-install for better compatibility with CPAN and others
- Reformatted POD in module code
- Moved hosting to Google Code

Version 0.7100: Tue Dec 21 2004
- Fixed version numbers, which were incompatible with some modules. (Thanks to
  Tassilo von Parseval <tassilo.von.parseval@rwth-aachen.de> for the bug
  report)
- Removed custom installation prompts

Version 0.7.0: Thu Oct 21 10:29:11 EDT 2004
- Renamed get_report to report, and added reports method. (Thanks to Aaron
  Wodrich <wodrich@gmail.com> for providing the impetus for the change.)
- Clarified the documentation
